Add A/J/Q/K case
- Card가 J/Q/K 일 경우, 분기 추가
- Player 턴에 21 도달 시, auto stand
- Card A 의 경우의 수 고려(1과 11)